first integration of solver, added load script.. still not working (for now)